// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Step /> should ask for ope and licenciement eco 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c3 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c6 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
}

.c5 {
  width: 100%;
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h3
      class="c1"
    >
      <div
        class="c2"
      />
      Chimie
    </h3>
  </header>
  <p
    class="c3"
  >
    Quel est l’échelon du salarié ?
    <br />
    Cette information se trouve sur le bulletin de salaire.
  </p>
  <label
    class="c4"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <select
    class="c5"
    id="echelon"
    name="echelon"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="130"
    >
      130
    </option>
    <option
      value="140"
    >
      140
    </option>
    <option
      value="150"
    >
      150
    </option>
    <option
      value="160"
    >
      160
    </option>
    <option
      value="175"
    >
      175
    </option>
    <option
      value="190"
    >
      190
    </option>
    <option
      value="205"
    >
      205
    </option>
    <option
      value="225"
    >
      225
    </option>
    <option
      value="235"
    >
      235
    </option>
    <option
      value="250"
    >
      250
    </option>
    <option
      value="275"
    >
      275
    </option>
    <option
      value="300"
    >
      300
    </option>
    <option
      value="325"
    >
      325
    </option>
    <option
      value="350"
    >
      350
    </option>
    <option
      value="360"
    >
      360
    </option>
    <option
      value="400"
    >
      400
    </option>
    <option
      value="460"
    >
      460
    </option>
    <option
      value="480"
    >
      480
    </option>
    <option
      value="510"
    >
      510
    </option>
    <option
      value="550"
    >
      550
    </option>
    <option
      value="660"
    >
      660
    </option>
    <option
      value="770"
    >
      770
    </option>
    <option
      value="880"
    >
      880
    </option>
  </select>
  <p
    class="c3"
  >
    Est-ce que l'entreprise est affiliée à une des organisations patronales employeur ?
    <span
      aria-label="champs obligatoire"
      class="c6"
    >
      *
    </span>
  </p>
  <div
    class="c7"
  >
    <label
      class="c4"
    >
      <input
        name="hasOpe"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c4"
    >
      <input
        name="hasOpe"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c3"
  >
    Le motif du licenciement est-il économique ?
    <span
      aria-label="champs obligatoire"
      class="c6"
    >
      *
    </span>
  </p>
  <div
    class="c7"
  >
    <label
      class="c4"
    >
      <input
        name="isEco"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c4"
    >
      <input
        name="isEco"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;

exports[`<Step /> should ask for ope and licenciement eco and age 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c10 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
}

.c10::-webkit-outer-spin-button,
.c10::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

.c3 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c8 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c6 {
  display: inline-block;
  margin-left: 1rem;
  color: #eb5757;
}

.c5 {
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    font-size: 1.6rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h3
      class="c1"
    >
      <div
        class="c2"
      />
      Chimie
    </h3>
  </header>
  <p
    class="c3"
  >
    Quel est l’échelon du salarié ?
    <br />
    Cette information se trouve sur le bulletin de salaire.
  </p>
  <label
    class="c4"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <select
    class="c5"
    id="echelon"
    name="echelon"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="130"
    >
      130
    </option>
    <option
      value="140"
    >
      140
    </option>
    <option
      value="150"
    >
      150
    </option>
    <option
      value="160"
    >
      160
    </option>
    <option
      value="175"
    >
      175
    </option>
    <option
      value="190"
    >
      190
    </option>
    <option
      value="205"
    >
      205
    </option>
    <option
      value="225"
    >
      225
    </option>
    <option
      value="235"
    >
      235
    </option>
    <option
      value="250"
    >
      250
    </option>
    <option
      value="275"
    >
      275
    </option>
    <option
      value="300"
    >
      300
    </option>
    <option
      value="325"
    >
      325
    </option>
    <option
      value="350"
    >
      350
    </option>
    <option
      value="360"
    >
      360
    </option>
    <option
      value="400"
    >
      400
    </option>
    <option
      value="460"
    >
      460
    </option>
    <option
      value="480"
    >
      480
    </option>
    <option
      value="510"
    >
      510
    </option>
    <option
      value="550"
    >
      550
    </option>
    <option
      value="660"
    >
      660
    </option>
    <option
      value="770"
    >
      770
    </option>
    <option
      value="880"
    >
      880
    </option>
  </select>
  <p
    class="c3"
  >
    Est-ce que l'entreprise est affiliée à une des organisations patronales employeur ?
    <span
      aria-label="champs obligatoire"
      class="c6"
    >
      *
    </span>
  </p>
  <div
    class="c7"
  >
    <label
      class="c4"
    >
      <input
        name="hasOpe"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c4"
    >
      <input
        name="hasOpe"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c3"
  >
    Le motif du licenciement est-il économique ?
    <span
      aria-label="champs obligatoire"
      class="c6"
    >
      *
    </span>
  </p>
  <div
    class="c7"
  >
    <label
      class="c4"
    >
      <input
        name="isEco"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c4"
    >
      <input
        name="isEco"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <label
    class="c8"
    for="1"
  >
    Quel était l’âge du salarié à la date du licenciement ?
    <span
      aria-label="champs obligatoire"
      class="c6"
    >
      *
    </span>
  </label>
  <div
    class="c9"
  >
    <input
      class="c10"
      id="1"
      name="age"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`<Step /> should render 1`] = `
.c2 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c1 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
}

.c3 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c5 {
  width: 100%;
}

@media (max-width:600px) {
  .c1 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c3 {
    font-size: 1.6rem;
  }
}

<div>
  <header
    class="c0"
  >
    <h3
      class="c1"
    >
      <div
        class="c2"
      />
      Chimie
    </h3>
  </header>
  <p
    class="c3"
  >
    Quel est l’échelon du salarié ?
    <br />
    Cette information se trouve sur le bulletin de salaire.
  </p>
  <label
    class="c4"
    for="echelon"
  >
    Sélectionnez un échelon
  </label>
  <select
    class="c5"
    id="echelon"
    name="echelon"
  >
    <option
      disabled=""
      value=""
    />
    <option
      value="130"
    >
      130
    </option>
    <option
      value="140"
    >
      140
    </option>
    <option
      value="150"
    >
      150
    </option>
    <option
      value="160"
    >
      160
    </option>
    <option
      value="175"
    >
      175
    </option>
    <option
      value="190"
    >
      190
    </option>
    <option
      value="205"
    >
      205
    </option>
    <option
      value="225"
    >
      225
    </option>
    <option
      value="235"
    >
      235
    </option>
    <option
      value="250"
    >
      250
    </option>
    <option
      value="275"
    >
      275
    </option>
    <option
      value="300"
    >
      300
    </option>
    <option
      value="325"
    >
      325
    </option>
    <option
      value="350"
    >
      350
    </option>
    <option
      value="360"
    >
      360
    </option>
    <option
      value="400"
    >
      400
    </option>
    <option
      value="460"
    >
      460
    </option>
    <option
      value="480"
    >
      480
    </option>
    <option
      value="510"
    >
      510
    </option>
    <option
      value="550"
    >
      550
    </option>
    <option
      value="660"
    >
      660
    </option>
    <option
      value="770"
    >
      770
    </option>
    <option
      value="880"
    >
      880
    </option>
  </select>
</div>
`;
